@@ -1,14 +1,19 @@
 package com.ianm1647.expandeddelight.integration.rei.juicing;
 
 import com.google.common.collect.ImmutableList;
+import com.ianm1647.expandeddelight.ExpandedDelight;
 import com.ianm1647.expandeddelight.integration.rei.ExpandedDelightREI;
+import com.ianm1647.expandeddelight.registry.RecipeRegistry;
 import com.ianm1647.expandeddelight.util.recipe.JuicerRecipe;
 import me.shedaniel.rei.api.common.category.CategoryIdentifier;
 import me.shedaniel.rei.api.common.display.basic.BasicDisplay;
 import me.shedaniel.rei.api.common.entry.EntryIngredient;
 import me.shedaniel.rei.api.common.util.EntryIngredients;
+import me.shedaniel.rei.api.common.util.EntryStacks;
 import net.fabricmc.api.EnvType;
 import net.fabricmc.api.Environment;
+import net.minecraft.recipe.RecipeEntry;
+import net.minecraft.util.Identifier;
 
 import java.util.*;
 
@@ -17,10 +22,12 @@ public class JuicingRecipeDisplay extends BasicDisplay {
     private final EntryIngredient bottleOutput;
     private final int cookTime;
 
-    public JuicingRecipeDisplay(JuicerRecipe recipe) {
-        super(EntryIngredients.ofIngredients(recipe.getIngredients()), Collections.singletonList(EntryIngredients.of(recipe.getOutput(null))), Optional.ofNullable(recipe.getId()));
-        this.bottleOutput = EntryIngredients.of(recipe.getBottle());
-        this.cookTime = recipe.getCookTime();
+    public JuicingRecipeDisplay(RecipeEntry<JuicerRecipe> recipe) {
+        super(List.of(EntryIngredients.ofIngredients(recipe.value().getIngredients()).get(0), EntryIngredients.ofIngredients(recipe.value().getIngredients()).get(1)), List.of(EntryIngredient.of(EntryStacks.of(recipe.value().getResult(null)))));
+
+//        super(EntryIngredients.ofIngredients(recipe.getIngredients()), Collections.singletonList(EntryIngredients.of(recipe.getOutput())), Optional.of(Identifier.of(ExpandedDelight.MODID, "juicing")));
+        this.bottleOutput = EntryIngredients.of(recipe.value().getBottle());
+        this.cookTime = recipe.value().getCookTime();
     }
 
     public CategoryIdentifier<?> getCategoryIdentifier() {
